src/objects/Sandbox_Refresh_PII_Masking__mdt.object
<CustomObject>
    <description>Create a new batch interface using Apex to loop over sObjects defined in Custom Metadata

Description: As a system admin user, I want to be able to execute a standard sObject batch to mask all the fields on the sObjects defined in a custom metadata. This functionality needs to be accessible via a Visualforce page through a custom button.</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>This field tracks the name of the field on the object for which the batch should mask the info.</description>
        <label>Field Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaskingString__c</fullName>
        <description>This field will be a text field that will contain the masking string.</description>
        <label>Masking String</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masking__c</fullName>
        <label>Masking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. NULL</fullName>
                    <default>true</default>
                    <label>1. NULL</label>
                </value>
                <value>
                    <fullName>2. APPEND BEGINNING</fullName>
                </value>
                <value>
                    <fullName>3. APPEND END</fullName>
                </value>
                <value>
                    <fullName>4. APPEND BOTH</fullName>
                </value>
                <value>
                    <fullName>5. REPLACE DOMAIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>This field tracks the name of the object for which the batch should run</description>
        <label>Object Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Refresh PII Masking</label>
    <pluralLabel>Sandbox Refresh PII Maskings</pluralLabel>
</CustomObject>